# la-gang-gang

./: .gitignore  .replit  CMakeLists.txt  README.adoc  README.md  filesystem.cpp  filesystem.h  main.cpp  mainTests.cpp  replit.nix
.ccls-cache/@home@runner@workspace/: main.cpp.blob
gui/: Images.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  menuwindow.cpp  menuwindow.h  menuwindow.ui
include/: filesystem.h
src/: filesystem.cpp  mainTests.cpp
